# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  output.ppm  output_img.ppm  output_img_gpu.ppm  output_img_tonemapped.ppm  specifications.txt
raytracer/: CMakeLists.txt  TEXTURE_TASKS.txt  output_img.ppm  output_img_gpu.ppm  output_img_kdtree.ppm  output_img_no_kdtree.ppm  photon_map.ppm
raytracer/src/: camera.h  main.cpp  object.h  render_cpu.cpp  render_cuda.cu
raytracer/src/components/: color.h  illumination.h  k-d_trees.h  light.h  material.h  photon.h  photon_map.h  vec3.h
raytracer/src/image/: image.h  image_ppm.cpp  tone_reproduction.h
raytracer/src/math/: color.h  mat4.h  point.h  ray.h  vec3.h
raytracer/src/objects/: sphere.h  triangle.h
raytracer/src/textures/: glitter.h  texture.h
setup-artifacts/: raytracing-equation-notes.md
src/: camera.h  main.cpp  main_cuda.cu  object.h  render_cpu.cpp  render_cuda.cu  world.h
src/components/: illumination.h  intersect_data.h  light.h  mat4.h  material.h  point.h  vec3.h
src/image/: image_ppm.cpp
src/objects/: sphere.h  triangle.h
src/textures/: checkerboard.h  noise.h
